improved analyze game section